--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -8,10 +8,10 @@
     <PackageReleaseNotes>Just Ceal It</PackageReleaseNotes>
     <Authors>Space Time</Authors>
     <Company>Space Time</Company>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <Version>1.0.2</Version>
-    <FileVersion>1.0.2</FileVersion>
-    <InformationalVersion>1.0.2</InformationalVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <Version>1.0.3</Version>
+    <FileVersion>1.0.3</FileVersion>
+    <InformationalVersion>1.0.3</InformationalVersion>
     <PackageTags>Tool;Sheas;Cealer;Sni</PackageTags>
     <ApplicationIcon>Sheas-Cealer-Logo.ico</ApplicationIcon>
     <PackageIcon>Sheas Cealer Logo.png</PackageIcon>
@@ -53,6 +53,8 @@
     <None Remove="Cealing-Clash.exe" />
     <None Remove="Cealing-Host.json" />
     <None Remove="Clash.exe" />
+    <None Remove="config.yaml" />
+    <None Remove="Country.mmdb" />
     <None Remove="README.md" />
     <None Remove="Sheas-Cealer-Logo.ico" />
   </ItemGroup>
