--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -59,6 +59,7 @@
     <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
     <None Remove="README.md" />
+    <None Remove="README_EN.md" />
     <None Remove="Sheas-Cealer-Logo.ico" />
   </ItemGroup>
 
