--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -97,6 +97,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AboutMultilangConst.resx</DependentUpon>
     </Compile>
+    <Compile Update="Consts\SettingsMultilangConst.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SettingsMultilangConst.resx</DependentUpon>
+    </Compile>
     <Compile Update="Props\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
@@ -106,6 +111,9 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>MainMultilangConst.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Wins\SettingsWin.xaml.cs">
+      <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
 
@@ -117,6 +125,10 @@
     <EmbeddedResource Update="Consts\MainMultilangConst.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MainMultilangConst.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Consts\SettingsMultilangConst.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>SettingsMultilangConst.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
