--- a/Props/Settings.settings
+++ b/Props/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="ExtraArgs" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="IsLightTheme" Type="System.SByte" Scope="User">
+      <Value Profile="(Default)">-1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
