--- a/Props/Settings.settings
+++ b/Props/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="IsLightTheme" Type="System.SByte" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
+    <Setting Name="IsEnglishLang" Type="System.SByte" Scope="User">
+      <Value Profile="(Default)">-1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
