--- a/Props/Settings.settings
+++ b/Props/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="IsEnglishLang" Type="System.SByte" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
+    <Setting Name="PrimaryColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Red</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
