--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove=".filenesting.json" />
     <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
     <None Remove="README.md" />
