--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -77,6 +77,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="*" />
+    <PackageReference Include="EasyUpdateFromGithub" Version="1.3.3.20241216" />
     <PackageReference Include="MaterialDesignThemes" Version="*" />
     <PackageReference Include="NginxConfigParser" Version="*" />
     <PackageReference Include="YamlDotNet" Version="*" />
