--- a/Sheas-Cealer.csproj
+++ b/Sheas-Cealer.csproj
@@ -73,10 +73,10 @@
 
   <ItemGroup>
     <Reference Include="Ona-Core">
-      <HintPath>..\Ona-Core\bin\Release\net8.0-windows10.0.26100.0\Ona-Core.dll</HintPath>
+      <HintPath>..\Ona-Core\bin\Release\net8.0\Ona-Core.dll</HintPath>
     </Reference>
     <Reference Include="Sheas-Core">
-      <HintPath>..\Sheas-Core\bin\Release\net8.0-windows10.0.26100.0\Sheas-Core.dll</HintPath>
+      <HintPath>..\Sheas-Core\bin\Release\net8.0\Sheas-Core.dll</HintPath>
     </Reference>
   </ItemGroup>
 
